Listen for lifecycle events in CodeEditorView

--- a/build-tools/eventbus-events/build.gradle
+++ b/build-tools/eventbus-events/build.gradle
@@ -45,7 +45,8 @@ android {
 
 dependencies {
     implementation common.jkotlin
-    implementation project (path: ':common')
+    implementation project (path: ':shared')
+    implementation project (path: ':build-tools:logger')
     
     api project (path: ':build-tools:eventbus')
 }
