--- a/build-tools/projects/build.gradle
+++ b/build-tools/projects/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     api project (path: ':build-tools:tooling-api')
     
     implementation project (path: ':shared')
+    implementation project (path: ':build-tools:logger')
     
     implementation common.io
     implementation google.guava
