--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,6 +3,8 @@ ext {
     kotlin_version = '1.7.0'
     google_java_format_version = '1.15.0'
     
+    appcompat = '1.4.1'
+    
     androidide = [
             javac: 'io.github.itsaky:nb-javac-android:17.0.0.3-SNAPSHOT'
     ]
@@ -29,7 +31,7 @@ ext {
     
     androidx = [
             annotation       : 'androidx.annotation:annotation:1.3.0',
-            appcompat        : 'androidx.appcompat:appcompat:1.4.1',
+            appcompat        : "androidx.appcompat:appcompat:$appcompat",
             cardview         : 'androidx.cardview:cardview:1.0.0',
             constraintlayout : 'androidx.constraintlayout:constraintlayout:2.1.3',
             coordinatorlayout: 'androidx.coordinatorlayout:coordinatorlayout:1.1.0',
