--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-
-buildscript {
-    apply from: '../gradle/dependencies.gradle'
-}
+apply from: 'gradle/dependencies.gradle'
 
 android {
     compileSdkVersion rootProject.ext.compileSdk
