--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,12 +1,12 @@
 ext {
-    agp_version = '7.2.1'
+    agp_version = '7.3.0-beta05'
     kotlin_version = '1.7.10'
     google_java_format_version = '1.15.0'
     
     classpaths = [
-            agp: "com.android.tools.build:gradle:$agp_version",
+            agp                 : "com.android.tools.build:gradle:$agp_version",
             kotlin_gradle_plugin: "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version",
-            google_java_format: "com.google.googlejavaformat:google-java-format:$google_java_format_version"
+            google_java_format  : "com.google.googlejavaformat:google-java-format:$google_java_format_version"
     ]
     
     androidide = [
@@ -60,20 +60,21 @@ ext {
     ]
     
     xml = [
-            xercesImpl: 'xerces:xercesImpl:2.12.2',
-            apis      : 'xml-apis:xml-apis:2.0.2',
-            remark    : 'com.kotcrab.remark:remark:1.2.0',
-            resolver  : 'xml-resolver:xml-resolver:1.2',
-            lsp4j: 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0',
+            xercesImpl    : 'xerces:xercesImpl:2.12.2',
+            apis          : 'xml-apis:xml-apis:2.0.2',
+            remark        : 'com.kotcrab.remark:remark:1.2.0',
+            resolver      : 'xml-resolver:xml-resolver:1.2',
+            lsp4j         : 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0',
             jb_annotations: 'org.jetbrains:annotations:23.0.0'
     ]
     
     tests = [
-            junit            : 'junit:junit:4.13.2',
-            google_truth     : 'com.google.truth:truth:1.1.3',
-            robolectric      : 'org.robolectric:robolectric:4.8.1',
-            androidx_junit   : 'androidx.test.ext:junit:1.1.3',
-            androidx_espresso: 'androidx.test.espresso:espresso-core:3.4.0',
-            mockito          : 'org.mockito:mockito-core:4.6.1'
+            junit             : 'junit:junit:4.13.2',
+            google_truth      : 'com.google.truth:truth:1.1.3',
+            robolectric       : 'org.robolectric:robolectric:4.8.1',
+            androidx_test_core: 'androidx.test:core:1.4.0',
+            androidx_junit    : 'androidx.test.ext:junit:1.1.3',
+            androidx_espresso : 'androidx.test.espresso:espresso-core:3.4.0',
+            mockito           : 'org.mockito:mockito-core:4.6.1'
     ]
 }
