--- a/lsp/xml/build.gradle
+++ b/lsp/xml/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     testImplementation project (':lsp:testing')
     testImplementation project (':common')
     testImplementation project (':actions')
+    testImplementation tests.androidx_test_core
     testImplementation tests.junit
     testImplementation tests.google_truth
     testImplementation tests.robolectric
