--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,9 @@ include ':actions'
 include ':app'
 include ':common'
 include ':emulatorview'
+include ':eventbus'
+include ':eventbus-android'
+include ':eventbus-events'
 include ':lexers'
 include ':sdk-info'
 include ':treeview'
@@ -29,9 +32,6 @@ include ':build-tools:fuzzysearch'
 include ':build-tools:builder-model-impl'
 include ':build-tools:jsonrpc'
 include ':build-tools:projects'
-include ':build-tools:eventbus'
-include ':build-tools:eventbus-android'
-include ':build-tools:eventbus-events'
 include ':build-tools:tooling-api-testing'
 include ':build-tools:javac-services'
 include ':lsp:models'
