--- a/build-tools/jsonrpc/build.gradle
+++ b/build-tools/jsonrpc/build.gradle
@@ -26,5 +26,5 @@ java {
 
 dependencies {
     implementation google.gson
-    implementation project (path: ':build-tools:logger')
+    implementation project (path: ':logger')
 }
