--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include ':eventbus'
 include ':eventbus-android'
 include ':eventbus-events'
 include ':lexers'
+include ':logger'
 include ':sdk-info'
 include ':treeview'
 include ':xml-inflater'
@@ -21,7 +22,6 @@ include ':lsp:testing'
 include ':build-tools:framework-stubs'
 include ':build-tools:google-java-format'
 include ':build-tools:javac'
-include ':build-tools:logger'
 include ':build-tools:tooling-api'
 include ':build-tools:tooling-api-events'
 include ':build-tools:tooling-api-impl'
