--- a/build-tools/tooling-api-testing/build.gradle
+++ b/build-tools/tooling-api-testing/build.gradle
@@ -26,7 +26,7 @@ java {
 
 dependencies {
     implementation common.jkotlin
-    implementation project (path: ':build-tools:logger')
+    implementation project (path: ':logger')
     implementation project (path: ':build-tools:tooling-api')
 }
 
