--- a/logger/build.gradle
+++ b/logger/build.gradle
@@ -20,8 +20,8 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility rootProject.ext.javaSourceVersion
+    targetCompatibility rootProject.ext.javaTargetVersion
 }
 
 dependencies {
