Cache and reuse SourceFileManagers for all modules

--- a/build-tools/javac-services/build.gradle
+++ b/build-tools/javac-services/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
     implementation common.kotlin
     implementation common.utilcode
+    implementation google.guava
     implementation project (':common')
     implementation project(path: ':logger')
     
