--- a/treeview/build.gradle
+++ b/treeview/build.gradle
@@ -24,4 +24,6 @@ android {
 dependencies {
     implementation fileTree (dir: 'libs', include: ['*.jar'])
     implementation androidx.appcompat
+    
+    implementation project (path: ':logger')
 }
