Define namespaces in build.gradle instead of packages in AndroidManifest

--- a/build-tools/javac-services/build.gradle
+++ b/build-tools/javac-services/build.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 android {
+    namespace "com.itsaky.androidide.javac.services"
     compileSdkVersion rootProject.ext.compileSdk
     buildToolsVersion rootProject.ext.buildTools
     
