--- a/lsp/api/build.gradle
+++ b/lsp/api/build.gradle
@@ -18,6 +18,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace "com.itsaky.androidide.lsp.api"
     compileSdkVersion rootProject.ext.compileSdk
     buildToolsVersion rootProject.ext.buildTools
     
