--- a/build-tools/javac-services/src/main/AndroidManifest.xml
+++ b/build-tools/javac-services/src/main/AndroidManifest.xml
@@ -15,4 +15,4 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<manifest package="com.itsaky.androidide.javac.services"/>
+<manifest/>
