--- a/eventbus-android/src/main/AndroidManifest.xml
+++ b/eventbus-android/src/main/AndroidManifest.xml
@@ -16,4 +16,4 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.itsaky.androidide.eventbus.android"/>
+<manifest/>
