--- a/lsp/api/src/main/AndroidManifest.xml
+++ b/lsp/api/src/main/AndroidManifest.xml
@@ -15,6 +15,4 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<manifest package="com.itsaky.androidide.lsp.api">
-
-</manifest>
+<manifest/>
