--- a/lsp/models/src/main/AndroidManifest.xml
+++ b/lsp/models/src/main/AndroidManifest.xml
@@ -15,4 +15,4 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<manifest package="com.itsaky.androidide.lsp.models" />
+<manifest/>
