--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,11 +2,13 @@ ext {
     agp_version = '7.3.0-beta05'
     kotlin_version = '1.7.10'
     google_java_format_version = '1.15.0'
+    oss_licenses_version = '0.10.5'
     
     classpaths = [
             agp                 : "com.android.tools.build:gradle:$agp_version",
             kotlin_gradle_plugin: "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version",
-            google_java_format  : "com.google.googlejavaformat:google-java-format:$google_java_format_version"
+            google_java_format  : "com.google.googlejavaformat:google-java-format:$google_java_format_version",
+            oss_licenses        : "com.google.android.gms:oss-licenses-plugin:$oss_licenses_version"
     ]
     
     androidide = [
@@ -16,7 +18,6 @@ ext {
     common = [
             editor     : 'io.github.Rosemoe.sora-editor:editor:0.16.3',
             utilcode   : 'com.blankj:utilcodex:1.31.0',
-            file_picker: 'com.github.abhishekti7:UnicornFilePicker:1.0.2',
             glide      : 'com.github.bumptech.glide:glide:4.13.2',
             glide_ap   : 'com.github.bumptech.glide:compiler:4.13.2',
             quickaction: 'com.github.piruin:quickaction:2.4.3',
@@ -56,7 +57,8 @@ ext {
             guava               : 'com.google.guava:guava:31.1-android',
             guava_jre           : 'com.google.guava:guava:31.1-jre',
             auto_val_annotations: 'com.google.auto.value:auto-value-annotations:1.9',
-            auto_val_ap         : 'com.google.auto.value:auto-value:1.9'
+            auto_val_ap         : 'com.google.auto.value:auto-value:1.9',
+            oss_licenses        : 'com.google.android.gms:play-services-oss-licenses:17.0.0'
     ]
     
     xml = [
