--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,5 +1,5 @@
 ext {
-    agp_version = '7.3.0-beta05'
+    agp_version = '7.3.0-rc01'
     kotlin_version = '1.7.10'
     google_java_format_version = '1.15.0'
     oss_licenses_version = '0.10.5'
