--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ org.gradle.jvmargs=-Xmx2048M --add-opens java.base/java.lang=ALL-UNNAMED --add-o
 android.useAndroidX=true
 android.enableJetifier=true
 androidide.tooling.supportedAgpVersion=7.2.0
+android.jetifier.ignorelist=common-30.2.2.jar
