--- a/settings.gradle
+++ b/settings.gradle
@@ -37,3 +37,5 @@ include ':build-tools:jsonrpc'
 include ':build-tools:projects'
 include ':build-tools:tooling-api-testing'
 include ':lookup'
+include ':build-tools:aaptcompiler'
+include ':build-tools:layoutlib-api'
