Create resource tables when initializing project

--- a/build-tools/projects/build.gradle
+++ b/build-tools/projects/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation project (path: ':shared')
     implementation project (path: ':logger')
     implementation project (path: ':build-tools:javac-services')
+    implementation project (path: ':build-tools:xml-utils')
     
     implementation common.io
     implementation google.guava
