--- a/build-tools/xml-utils/build.gradle
+++ b/build-tools/xml-utils/build.gradle
@@ -21,7 +21,7 @@ plugins {
 }
 
 android {
-    namespace "com.itsaky.androidide.aaptcompiler"
+    namespace "com.itsaky.androidide.xml"
     compileSdkVersion rootProject.ext.compileSdk
     buildToolsVersion rootProject.ext.buildTools
     
