Read module resources in parallel

--- a/build-tools/xml-utils/build.gradle
+++ b/build-tools/xml-utils/build.gradle
@@ -56,6 +56,7 @@ android {
 dependencies {
     implementation common.kotlin
     implementation project(path: ':logger')
+    implementation project(path: ':build-tools:jdt')
     
     api project(path: ':build-tools:aaptcompiler')
     
