--- a/sdk-info/build.gradle
+++ b/sdk-info/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     implementation androidx.appcompat
     implementation google.material
     
+    implementation project(path: ':build-tools:jdt')
+    
     compileOnly project (":common")
 }
