--- a/settings.gradle
+++ b/settings.gradle
@@ -41,3 +41,4 @@ include ':build-tools:aaptcompiler'
 include ':build-tools:layoutlib-api'
 include ':build-tools:jaxp'
 include ':build-tools:xml-utils'
+include ':build-tools:jdt'
