Provide proper instances of XmlRegistry to completion providers with the Lookup API

--- a/build-tools/xml-utils/build.gradle
+++ b/build-tools/xml-utils/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation project(path: ':logger')
     implementation project(path: ':build-tools:jdt')
     
+    api project(path: ':lookup')
     api project(path: ':build-tools:aaptcompiler')
     
     testImplementation tests.junit
