Added a few more methods in WidgetTable API

--- a/lsp/xml/build.gradle
+++ b/lsp/xml/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation project (':lexers')
     implementation project (':build-tools:xml-dom')
     implementation project (':build-tools:xml-formatter')
+    implementation project (':build-tools:xml-utils')
     implementation project (':sdk-info')
     
     implementation androidx.ktx
