Reduced MIN_SEARCH_RATIO to 45 for completion items fuzzy match

--- a/build-tools/aaptcompiler/build.gradle
+++ b/build-tools/aaptcompiler/build.gradle
@@ -58,12 +58,11 @@ dependencies {
     implementation project (':logger')
     implementation project (':build-tools:jaxp')
     
+    api aapt.annotations
     api aapt.common
+    api aapt.proto
+    api google.protobuf
     api project (':build-tools:layoutlib-api')
-    
-    implementation aapt.annotations
-    implementation aapt.proto
-    implementation google.protobuf
     
     testImplementation tests.junit
     testImplementation tests.robolectric
