--- a/tests/test-project/app/build.gradle
+++ b/tests/test-project/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'unresolved:unresolved:unresolved'
     implementation project (path: ':another-android-library')
 //    implementation project (path: ':android-library')
