Added basic class file reader

--- a/settings.gradle
+++ b/settings.gradle
@@ -42,3 +42,4 @@ include ':build-tools:layoutlib-api'
 include ':build-tools:jaxp'
 include ':build-tools:xml-utils'
 include ':build-tools:jdt'
+include ':build-tools:classfile'
