Include branch and commit hash in CI builds

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,24 @@
+/*
+ *  This file is part of AndroidIDE.
+ *
+ *  AndroidIDE is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  AndroidIDE is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
+
 import com.google.googlejavaformat.java.Formatter
 import com.google.googlejavaformat.java.JavaFormatterOptions
+import com.itsaky.androidide.Versions
 
 import java.nio.charset.StandardCharsets
 import java.nio.file.Files
@@ -11,12 +30,12 @@ buildscript {
     apply from: "dependencies.gradle"
     
     project.ext {
-        compileSdk = 32
-        buildTools = "31.0.0"
-        minSdk = 26
-        targetSdk = 28
-        versionCode = 212
-        versionName = "2.1.2-beta"
+        compileSdk = Versions.INSTANCE.compileSdk
+        buildTools = Versions.INSTANCE.buildTools
+        minSdk = Versions.INSTANCE.minSdk
+        targetSdk = Versions.INSTANCE.targetSdk
+        versionCode = Versions.INSTANCE.versionCode
+        versionName = Versions.INSTANCE.versionName
         packageName = "com.itsaky.androidide"
         
         javaSourceVersion = JavaVersion.VERSION_11
@@ -24,13 +43,13 @@ buildscript {
     }
     
     repositories {
-        mavenLocal()
+        mavenLocal ()
         
         // Do not use mavenCentral()
         maven {
             url 'https://repo1.maven.org/maven2'
         }
-    
+        
         // Do not use google()
         maven {
             url 'https://maven.google.com'
@@ -75,7 +94,7 @@ allprojects {
     }
     
     repositories {
-        mavenLocal()
+        mavenLocal ()
         
         // Do not use mavenCentral()
         maven {
