Updated launcher icon

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,7 @@ dependencies {
     implementation common.jsoup
     
     // AndroidX
+    implementation androidx.splashscreen
     implementation androidx.annotation
     implementation androidx.appcompat
     implementation androidx.cardview
