--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,104 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+  xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission
-        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission
+    android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+    tools:ignore="ScopedStorage" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+  <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
-    <application
-        android:name=".app.StudioApp"
-        android:allowBackup="false"
-        android:allowNativeHeapPointerTagging="false"
-        android:hardwareAccelerated="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:largeHeap="true"
-        android:preserveLegacyExternalStorage="true"
-        android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:ignore="UnusedAttribute,MediaCapabilities">
-        <activity
-            android:name=".CrashHandlerActivity"
-            android:exported="true"
-            android:windowSoftInputMode="stateAlwaysHidden">
-            <intent-filter>
-                <action android:name="com.itsaky.androidide.REPORT_CRASH" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".SplashActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:configChanges="orientation|screenSize|uiMode" />
-        <activity
-            android:name=".DesignerActivity"
-            android:configChanges="orientation|screenSize|uiMode"
-            android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".EditorActivity"
-            android:configChanges="orientation|screenSize|uiMode"
-            android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".PreferencesActivity"
-            android:configChanges="orientation|screenSize" />
-        <activity
-            android:name=".AboutActivity"
-            android:configChanges="orientation|screenSize|uiMode" />
-        <activity
-            android:name=".TerminalActivity"
-            android:configChanges="orientation|screenSize|uiMode"
-            android:windowSoftInputMode="adjustResize" />
-        <service
-            android:name=".services.GradleBuildService"
-            android:exported="false" />
-        <provider
-            android:name=".provider.IDEDocumentsProvider"
-            android:authorities="com.itsaky.androidide.documents"
-            android:exported="true"
-            android:grantUriPermissions="true"
-            android:permission="android.permission.MANAGE_DOCUMENTS">
-            <intent-filter>
-                <action android:name="android.content.action.DOCUMENTS_PROVIDER" />
-            </intent-filter>
-        </provider>
-        <provider
-          android:authorities="${applicationId}.providers.fileprovider"
-          android:exported="false"
-          android:grantUriPermissions="true"
-          android:name=".provider.IDEFileProvider">
-            <meta-data
-              android:name="android.support.FILE_PROVIDER_PATHS"
-              android:resource="@xml/ide_file_provider_paths" />
-        </provider>
-        <receiver
-            android:name=".services.LogReceiver"
-            android:enabled="true"
-            android:exported="true"
-            tools:ignore="ExportedReceiver">
-            <intent-filter>
-                <action android:name="com.itsaky.androidide.logs.APPEND_LOG" />
-            </intent-filter>
-        </receiver>
-        <activity
-          android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
-          android:theme="@style/AppTheme" />
-        <activity
-          android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
-          android:theme="@style/AppTheme" />
-    </application>
+  <application
+    android:name=".app.StudioApp"
+    android:allowBackup="false"
+    android:allowNativeHeapPointerTagging="false"
+    android:hardwareAccelerated="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:largeHeap="true"
+    android:preserveLegacyExternalStorage="true"
+    android:requestLegacyExternalStorage="true"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/AppTheme"
+    tools:ignore="UnusedAttribute,MediaCapabilities">
+    <activity
+      android:name=".CrashHandlerActivity"
+      android:exported="true"
+      android:windowSoftInputMode="stateAlwaysHidden">
+      <intent-filter>
+        <action android:name="com.itsaky.androidide.REPORT_CRASH" />
+        <category android:name="android.intent.category.DEFAULT" />
+      </intent-filter>
+    </activity>
+    <activity
+      android:name=".MainActivity"
+      android:configChanges="orientation|screenSize|uiMode"
+      android:exported="true"
+      android:theme="@style/AppTheme.Splash">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+    <activity
+      android:name=".DesignerActivity"
+      android:configChanges="orientation|screenSize|uiMode"
+      android:windowSoftInputMode="adjustResize" />
+    <activity
+      android:name=".EditorActivity"
+      android:configChanges="orientation|screenSize|uiMode"
+      android:windowSoftInputMode="adjustResize" />
+    <activity
+      android:name=".PreferencesActivity"
+      android:configChanges="orientation|screenSize" />
+    <activity
+      android:name=".AboutActivity"
+      android:configChanges="orientation|screenSize|uiMode" />
+    <activity
+      android:name=".TerminalActivity"
+      android:configChanges="orientation|screenSize|uiMode"
+      android:windowSoftInputMode="adjustResize" />
+
+    <service
+      android:name=".services.GradleBuildService"
+      android:exported="false" />
+
+    <provider
+      android:name=".provider.IDEDocumentsProvider"
+      android:authorities="com.itsaky.androidide.documents"
+      android:exported="true"
+      android:grantUriPermissions="true"
+      android:permission="android.permission.MANAGE_DOCUMENTS">
+      <intent-filter>
+        <action android:name="android.content.action.DOCUMENTS_PROVIDER" />
+      </intent-filter>
+    </provider>
+    <provider
+      android:name=".provider.IDEFileProvider"
+      android:authorities="${applicationId}.providers.fileprovider"
+      android:exported="false"
+      android:grantUriPermissions="true">
+      <meta-data
+        android:name="android.support.FILE_PROVIDER_PATHS"
+        android:resource="@xml/ide_file_provider_paths" />
+    </provider>
+
+    <receiver
+      android:name=".services.LogReceiver"
+      android:enabled="true"
+      android:exported="true"
+      tools:ignore="ExportedReceiver">
+      <intent-filter>
+        <action android:name="com.itsaky.androidide.logs.APPEND_LOG" />
+      </intent-filter>
+    </receiver>
+
+    <activity
+      android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
+      android:theme="@style/AppTheme" />
+    <activity
+      android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
+      android:theme="@style/AppTheme" />
+  </application>
 </manifest>
