--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -45,7 +45,8 @@ ext {
             animated_vectors : 'androidx.vectordrawable:vectordrawable-animated:1.1.0',
             multidex         : 'androidx.multidex:multidex:2.0.1',
             ktx              : 'androidx.core:core-ktx:1.8.0',
-            lib_desugaring   : 'com.android.tools:desugar_jdk_libs:1.1.6'
+            lib_desugaring   : 'com.android.tools:desugar_jdk_libs:1.1.6',
+            splashscreen     : 'androidx.core:core-splashscreen:1.0.0'
     ]
     
     google = [
@@ -56,14 +57,14 @@ ext {
             auto_val_annotations: 'com.google.auto.value:auto-value-annotations:1.9',
             auto_val_ap         : 'com.google.auto.value:auto-value:1.9',
             oss_licenses        : 'com.google.android.gms:play-services-oss-licenses:17.0.0',
-            protobuf: 'com.google.protobuf:protobuf-java:3.10.0'
+            protobuf            : 'com.google.protobuf:protobuf-java:3.10.0'
     ]
     
     aapt = [
-            common: 'com.android.tools:common:30.2.2',
-            annotations: 'com.android.tools:annotations:30.2.2',
+            common        : 'com.android.tools:common:30.2.2',
+            annotations   : 'com.android.tools:annotations:30.2.2',
             jb_annotations: 'org.jetbrains:annotations:13.0',
-            proto: 'com.android.tools.build:aapt2-proto:7.2.2-7984345'
+            proto         : 'com.android.tools.build:aapt2-proto:7.2.2-7984345'
     ]
     
     xml = [
