Added events index for :lsp:api

--- a/lsp/api/build.gradle
+++ b/lsp/api/build.gradle
@@ -51,6 +51,9 @@ kapt {
 }
 
 dependencies {
+    
+    kapt common.eventbus_ap
+    
     implementation common.editor
     implementation project (':build-tools:fuzzysearch')
     implementation project (':eventbus-events')
