--- a/settings.gradle
+++ b/settings.gradle
@@ -43,3 +43,4 @@ include ':build-tools:tooling-api-testing'
 include ':build-tools:xml-dom'
 include ':build-tools:xml-formatter'
 include ':build-tools:xml-utils'
+include ':editor'
