--- a/build-tools/projects/build.gradle
+++ b/build-tools/projects/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     
     implementation project (path: ':shared')
     implementation project (path: ':logger')
+    implementation project (path: ':lookup')
     implementation project (path: ':build-tools:javac-services')
     implementation project (path: ':build-tools:xml-utils')
     
