--- a/editor/src/main/AndroidManifest.xml
+++ b/editor/src/main/AndroidManifest.xml
@@ -16,6 +16,4 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
-</manifest>
+<manifest/>
