--- a/build-tools/tooling-api-impl/build.gradle
+++ b/build-tools/tooling-api-impl/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     implementation project (path: ':build-tools:tooling-api')
     
     implementation common.jkotlin
+    implementation xml.xercesImpl
+    implementation xml.apis
     implementation 'org.gradle:gradle-tooling-api:7.5.1'
     
     testImplementation project (path: ':build-tools:tooling-api-testing')
